@@ -15,6 +15,7 @@ sub beadwork {
         dk    => \&_dk,
         mario => \&_mario,
         '1up' => \&_1up,
+        apple => \&_apple,
     );
 
     if ($args->{preset}) {
@@ -194,6 +195,55 @@ sub _mario {
     return $args;
 }
 
+sub _apple {
+    my $args = shift;
+
+    $args->{art} = '
+...............................
+...................11..........
+..................111..........
+.................111...........
+................111............
+................11.............
+................1..............
+.........111111...1111111......
+.......11111111111111111111....
+.....111111111111111111111111..
+....2222222222222222222222222..
+...2222222222222222222222222...
+..2222222222222222222222222....
+..2222222222222222222222222....
+..333333333333333333333333.....
+.3333333333333333333333333.....
+.3333333333333333333333333.....
+.3333333333333333333333333.....
+.4444444444444444444444444.....
+..4444444444444444444444444....
+..4444444444444444444444444....
+..444444444444444444444444444..
+..5555555555555555555555555555.
+...555555555555555555555555555.
+...555555555555555555555555555.
+....5555555555555555555555555..
+.....66666666666666666666666...
+......666666666...666666666....
+.......6666666.....6666666.....
+........66666.......66666......
+...............................
+';
+
+    $args->{map} = {
+        '.' => 'white',
+        1 => '#28921c', # green
+        2 => '#ffc620', # yellow
+        3 => '#ff7f27', # orange
+        4 => '#ff1c1c', # red
+        5 => '#ba2049', # purple
+        6 => '#1c51db', # blue
+    };
+
+    return $args;
+}
 1;
 
 =head1 NAME
@@ -243,6 +293,8 @@ Some prefabricated examples are available via the C<preset> param:
 =item * C<dk>
 
 =item * C<1up>
+
+=item * C<apple>
 
 =back
 
