@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.41
+    - added beadwork preset: apple
     - require HTML::AutoTag v0.09 (keeping up-to-date)
     - added Spreadsheet::Engine support via new param 'apply'
     - calendar() cells aligned to right
